# neu-hpc-for-ai

./: .gitignore
week_01/matmul/: Makefile  README.md  matmul
week_01/matmul/include/: mat.h  matmul.h  util.h
week_01/matmul/src/: mat.c  matmul_serial.c  matmul_threads.c  util.c
week_01/matmul/tests/: test_matmul.c
week_02/cuda_gemm/: .README.md.swp  README.md  cuda_gemm.html  cuda_gemm.ipynb  cuda_read_checkpoint.ipynb
week_03/cuda_gemm_enhancements/: README.md  cuda_gemm_extensions.ipynb  gemm_xt.cu  gemm_xt_regtiling.cu  softmax_online.c
week_04/flash-attn-cuda/: .gitignore  Makefile  README.md  demo.ipynb  flash_attn_cuda.cu
week_05/flash-attn2-c/: .gitignore  Makefile  README.md  flash-attn2-demo.ipynb
week_05/flash-attn2-c/src/: flash_attn2_seq.c
week_06/flashattn_v2_ring_c/: .README.md.swp  .gitignore  Makefile  README.md
week_06/flashattn_v2_ring_c/src/: fa2_ring.c
week_07/deepseekmoe-labs/: README.md
week_07/deepseekmoe-labs/c_single/: Makefile
week_07/deepseekmoe-labs/c_single/src/: moe_single.c
week_07/deepseekmoe-labs/cases/: README.md
week_07/deepseekmoe-labs/cuda_nccl/: Makefile
week_07/deepseekmoe-labs/cuda_nccl/src/: moe_nccl.cu
week_07/deepseekmoe-labs/mpi_ep/: Makefile
week_07/deepseekmoe-labs/mpi_ep/src/: common.h  moe_mpi.c
week_07/deepseekmoe-labs/tests/: gen_cases.py
week_08/dist-flash-attn/: CMakeLists.txt  README.md
week_08/dist-flash-attn/include/: flash_attn.h  utils.h
week_08/dist-flash-attn/src/: flash_attn.cu  main.cu
